Ghosting is one frame short #42253

Closed
opened 2014-10-16 11:18:46 +02:00 by David Rylander · 7 comments

System Information
Bodhi linux 2.4.0, GeForce GTX 480

Blender Version
Broken: Broken: 2.71 9337574
Worked: (optional)

Short description of error
With ghosting for an Armature the End frame in range is not displayed.
Expected behavior is to ghost every frame in range, including End frame.

Exact steps for others to reproduce the error
Delete default cube and add Single bone.
Set Ghost to In range with Start: 1 and End: 5
In pose mode at frame 1 set X location of bone to -3, keyframe (linear interpolation)
at frame 6 set X location to 3. Keyframe (linear interpolation)

Go to frame 6, see ghosts for only frame range 1-4. (see screenshot and blender file)
ghosting_missing_frame.blend
blender-ghosting-missing-frame.jpg

**System Information** Bodhi linux 2.4.0, GeForce GTX 480 **Blender Version** Broken: Broken: 2.71 9337574 Worked: (optional) **Short description of error** With ghosting for an Armature the End frame in range is not displayed. Expected behavior is to ghost every frame in range, including End frame. **Exact steps for others to reproduce the error** Delete default cube and add Single bone. Set *Ghost* to *In range* with *Start: 1* and *End: 5* In pose mode at frame 1 set *X location of bone* to -3, keyframe (linear interpolation) at frame 6 set X location to 3. Keyframe (linear interpolation) Go to frame 6, see ghosts for only frame range 1-4. (see screenshot and blender file) [ghosting_missing_frame.blend](https://archive.blender.org/developer/F117653/ghosting_missing_frame.blend) ![blender-ghosting-missing-frame.jpg](https://archive.blender.org/developer/F117654/blender-ghosting-missing-frame.jpg)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @animationista

Added subscriber: @animationista

Added subscriber: @FloridaJo

Added subscriber: @FloridaJo
Joshua Leung was assigned by Antonis Ryakiotakis 2014-10-16 14:23:30 +02:00

Added subscriber: @Psy-Fi

Added subscriber: @Psy-Fi

This issue was referenced by 65d771dcaf

This issue was referenced by 65d771dcafea2baa8a41389ecf15b069dfe3f392
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Closed by commit 65d771dcaf.

Closed by commit 65d771dcaf.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#42253
No description provided.