Bugfix T42253: End frame for armature ghosting "in range" is not displayed